Fix: updated scroll functions to work on IE. Also fixed issue where first time scrolling on desktop size would be a few pixels off. This was an issue with adding the offsetfor the nav bar since it was a different size when it was not in the fixed position.

--- a/css/app.css
+++ b/css/app.css
@@ -254,16 +254,17 @@ ul {
     .nav {
         color: #ffffff;
         position: absolute;
-        top: 1em;
+        top: 0;
         left: 0;
         right: 0;
         margin: 0;
+        padding: .5em 1em .5em 1em;
     }
     .nav a {
         color: #ffffff;
         font-size: 1em;
         vertical-align: middle;
-        padding: 0 8px 3px 8px;
+        padding: 0 10px 3px 10px;
         margin: 10px 0 10px 0;
         border-right: 1px solid #ffffff;
         transition: all .5s ease;
@@ -294,6 +295,7 @@ ul {
     .nav-fixed a {
         color: #ffffff;
         font-size: 1em;
+        vertical-align: middle;
         padding: 0 10px 3px 10px;
         margin: 10px 0 10px 0;
         border-right: 1px solid #ffffff;
